--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <nav class="navbar navbar-top-default navbar-expand-lg navbar-simple nav-line">
         <div class="row no-gutters w-100">
             <div class="col-3 pl-3">
-            <a href="#home" title="Logo" class="logo scroll">
-                <!--Logo Default-->
+                <!--<a href="#home" title="Logo" class="logo scroll">
+                Logo Default
                 <img src="static/picture/logo.png" alt="logo" class="logo-dark">
-            </a>
+            </a>-->
             </div>
 
             <!--Nav Links-->
@@ -166,16 +166,16 @@
             <!-- Heading Area-->
             <div class="col-12 col-lg-6 about-img-area text-center text-lg-left">
                     <div class="heading-area pl-lg-4 p-0">
-                        <h6 class="sub-title main-color">Basic Info About Shop</h6>
+                        <h6 class="sub-title main-color">暂时没有满意的合照哈哈哈</h6>
                         <h2 class="title">我们的回忆</h2>
-                        <p class="paragraph">There are many variations of passages of Lorem Ipsum available be the majority have suffered alteration in some form, by injected humour or randomised words.</p>
+                        <p class="paragraph">打工人兼摄影师带着他的公主游走在大千世界, 相遇在书香书室, 赤着脚丫走在白浪攘攘的海岸, 不远万里跨过西域青海, 双赴升学学府...</p>
                             <!--List-->
-                            <a class="btn yellow-and-white-slider-btn" href="#">READ MORE</a>
+                            <a class="btn yellow-and-white-slider-btn" href="#">时空穿梭</a>
                     </div>
             </div>
             <div class="col-12 col-lg-6 about-img-area">
                 <div class="about-img">
-                    <img src="static/picture/img2.jpg">
+                    <img src="static/picture/jingyu.jpg">
                 </div>
             </div>
         </div>
@@ -189,7 +189,7 @@
         <div class="row">
             <div class="col-12 col-md-8 offset-md-2 text-center">
                 <div class="about-heading heading-details">
-                    <h4 class="heading">OUR PRODUCTION</h4>
+                    <h4 class="heading">恋爱荣誉勋章</h4>
                     <p class="top-des"></p>
                 </div>
             </div>
@@ -199,28 +199,28 @@
                 <div class="production-box">
                     <i class="las la-tv"></i>
                     <h4 class="production-heading">TV Shows.</h4>
-                    <p class="production-des">Lorem ipsum dolor sit amet, conse ctetur adipiscing nu elit sed do eiusmod tem.</p>
+                    <p class="production-des">一起看电影, 看吐槽, 看剧, 看时政, 《梦华录》真好看, 把赵盼儿和顾千帆给我锁死!</p>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-3 text-center">
                 <div class="production-box">
                     <i class="las la-trophy"></i>
                     <h4 class="production-heading">Awards.</h4>
-                    <p class="production-des">Lorem ipsum dolor sit amet, conse ctetur adipiscing nu elit sed do eiusmod tem.</p>
+                    <p class="production-des">猪猪奖励奶呼宝小鹿, 小鲸鱼项链, 口红, 香水, 静钰奖励猪猪福袋, 发绳, 手环, 鞋子, 手表。</p>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-3 text-center">
                 <div class="production-box">
                     <i class="las la-film"></i>
                     <h4 class="production-heading">Movies.</h4>
-                    <p class="production-des">Lorem ipsum dolor sit amet, conse ctetur adipiscing nu elit sed do eiusmod tem.</p>
+                    <p class="production-des">【吐槽】和某奶呼宝还没有一起在电影院看过电影，因为小女孩太懒，每次都趴床床。</p>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-3 text-center">
                 <div class="production-box">
                     <i class="las la-camera-retro"></i>
                     <h4 class="production-heading">Festivals.</h4>
-                    <p class="production-des">Lorem ipsum dolor sit amet, conse ctetur adipiscing nu elit sed do eiusmod tem.</p>
+                    <p class="production-des">作为小鲸鱼首席摄影师, 我一直在进步, 不进步就没有工钱, 镜头前的静钰也一直美美的。</p>
                 </div>
             </div>
         </div>
@@ -235,7 +235,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="video-btn">
-                        <a data-fancybox="" href="javascript:;"><i class="las la-play play-btn text-brown"></i></a>
+                        <a data-fancybox="" href="javascript:;" onclick="javascript:openVideo(src)"><i class="las la-play play-btn text-brown"></i></a>
                     </div>
                 </div>
             </div>
