--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- keywords -->
     <meta name="keywords" content="film, modern, clean, bootstrap responsive, html5, css3, portfolio, blog, studio, templates, multipurpose, one page, corporate, start-up, studio, branding, designer, freelancer, carousel, parallax, photography, studio, masonry, grid, faq">
     <!-- Page Title -->
-    <title>Film & Movies | MegaOne HTML5 Template</title>
+    <title>Love & Whale | Pig Pig & Little Whale</title>
     <!-- Favicon -->
     <link href="" rel="icon">
     <!-- Bundle -->
